--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Afacad:wght@400;500;700&display=swap');
+
 html, body {
   height: 100%;
 }
 
 body {
-  font-family: Helvetica;
+  font-family: 'Afacad', sans-serif;
   margin: 0;
   padding: 0;
   background: linear-gradient(
